# Recommendation-System-P.I.-2025

./: README.md  Testes.ipynb  app.py  app_carros.py  carros.csv  pyproject.toml
